# agent-research

./: .brand-grep-allow  .cgignore  .gitignore  CLAUDE.md  LICENSE  README.md  bedrock-models-available.json  bedrock-models-considering.json  bedrock-models-unavailable.json  models-claude.toml  models-qwen.toml  pyproject.toml  wiki-config-claude.toml  wiki-config.toml
agents/code-wiki-agent/: pyproject.toml
agents/code-wiki-agent/src/code_wiki_agent/: cli.py  config.py
agents/code-wiki-agent/src/code_wiki_agent/commands/: ingest.py  (+5 more)
agents/code-wiki-agent/src/code_wiki_mcp/: server.py
agents/code-wiki-agent/tests/: conftest.py  test_command_overrides.py  test_query_trace_unit.py
agents/code-wiki-agent/tests/commands/: test_lint_parity.py  test_scan_parity.py
agents/code-wiki-agent/tests/integration/: test_bedrock_iam.py  test_mcp_cancel.py  test_mcp_e2e.py  test_mcp_stdio.py  test_query_e2e.py  test_trace_coverage.py
agents/code-wiki-agent/tests/prompts/: test_project_context.py  test_prompt_snapshots.py  test_provenance.py  test_token_budget.py
agents/code-wiki-agent/tests/unit/: test_cli_help.py  test_cli_query.py  test_commands_ingest.py  test_commands_init.py  test_commands_lint.py  test_commands_log.py  test_commands_scan.py  test_config.py  test_mcp_new_tools.py  test_mcp_query_schema.py  test_query_code_fallback.py  test_query_result.py  test_query_search.py  test_stdout_guard.py  test_trace_viewer.py  test_wiki_scan_input.py
cores/subagent-runtime/: pyproject.toml
cores/subagent-runtime/src/subagent_runtime/: __init__.py  pool.py
cores/subagent-runtime/tests/: test_pool.py
cores/subagent-runtime/tests/integration/: test_pool_bedrock.py
(+1431 files in other folders)
