[project]
name = "code-wiki-agent"
version = "0.1.0"
description = "AWS Bedrock-powered wiki maintenance agent (MCP server + CLI)"
requires-python = ">=3.11"
dependencies = [
    "vault-io",
    "model-adapter",
    "subagent-runtime",
    "workspace-io",
    "bm25s==0.3.8",
    "mcp>=1.27.1",
    "langchain-aws>=1.4.6",
    "typer>=0.25.1",
    "pydantic>=2.0",
]

[project.scripts]
code-wiki-agent = "code_wiki_agent.cli:app"
code-wiki-mcp   = "code_wiki_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
vault-io         = { workspace = true }
model-adapter    = { workspace = true }
subagent-runtime = { workspace = true }
workspace-io     = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
markers = ["integration: requires real Bedrock or subprocess (skipped in CI by default)"]
